poc/tests/errors/test_FplUndeclaredVariable_02.fpl
TestNamespace
{
    theory
    {
        class Zero: obj
        {
            k: obj[m]
        }
    }
}

##############################

FplUndeclaredVariable:7:19: The name 'm' does not exist in the current context